# spatiotemporal-traffic-forecasting

./: .gitignore  .gitkeep  LICENSE  README.md  main.py  pyproject.toml
app/frontend/: main.py
docs/: README.md
notebooks/: data.ipynb  data_preprocessing_initial.ipynb  model.ipynb  prototyping.ipynb
src/: trainer.py
src/configs/: config.py
src/data/: loader.py  preprocess.py  pyg_dataset.py
src/models/: dcrnn.py  gcn_attention.py  gcn_baseline.py  gcn_gru.py  gcn_rnn.py  gcn_transformer.py  graph_wavenet.py  graphsage.py  stgcn.py
src/train/: evaluate.py  mlflow_utils.py  train.py  utils.py
